# C-projects

./: .gitignore  .gitmodules
C/c-server-client/: client  client-multithreading.c  client.c
C/peer-to-peer-chat-ice-stun-turn/: Makefile  README.md  p2p  project_knowledge.md  setup.md  test_local.sh
C/simd/: add_array  add_array.c  basic_simd.c  matrix_multiplication  simd_intro  simd_matrix_multiplication  simd_matrix_multiplication.c
C/stop-n-wait-udp/: client.c
C/udp-client-server/: udp-client  udp-server.c
C/your_docker/: README.md
Cpp/custom_allocator/: main  main.cpp
Cpp/hello/: main.cpp
Cpp/move/: main.cpp
Cpp/networking/: received_file.txt  udp_transfer
Cpp/raii/: main.cpp
Cpp/smart_pointers/: templates.cpp  unique_pointers.cpp
Cpp/type_traits/: main.cpp
c-server-client/: client-multithreading  server  server-multithreading  server-multithreading.c  server.c
cgo/hello_world/: main.go
code_dump/DirectoryMonitor/: DirectoryMonitor.sln
code_dump/Sandbox2/: Sandbox2.cpp  Sandbox2.sln  Sandbox2.vcxproj  Sandbox2.vcxproj.filters
code_dump/Sandboxie/: Sandboxie.cpp  Sandboxie.sln  Sandboxie.vcxproj  Sandboxie.vcxproj.filters
code_dump/cpp_python/drogon/emotion_analyzer/: .gitignore  CMakeLists.txt
code_dump/cpp_python/drogon/emotion_analyzer/config/: config.json
code_dump/cpp_python/drogon/emotion_analyzer/include/controllers/: EmotionAnalyzer.hpp  EmotionAnalyzerController.hpp  ShutdownController.h
code_dump/cpp_python/drogon/emotion_analyzer/src/: main.cpp
code_dump/cpp_python/drogon/emotion_analyzer/src/controllers/: EmotionAnalyzer.cpp  EmotionAnalyzerController.cpp  ShutdownController.cpp
code_dump/cpp_python/drogon/emotion_analyzer/src/python/: emotion_analyzer.py
code_dump/cpp_python/drogon/emotion_analyzer/tests/: CMakeLists.txt  test_emotion_analyzer.cpp
udp-client-server/: udp-client.c  udp-server
(+216 files in other folders)
